--- a/MyProxy/app.yaml
+++ b/MyProxy/app.yaml
@@ -50,5 +50,23 @@ handlers:
   secure: optional
 
 - url: /.*
-  script: mirror.app
+  script: server/mirror.app
   secure: optional
+
+
+skip_files: |
+ ^(.*/)?(
+ (app\.yaml)|
+ (app\.yml)|
+ (index\.yaml)|
+ (index\.yml)|
+ (#.*#)|
+ (.*~)|
+ (.*\.py[co])|
+ (.*/RCS/.*)|
+ (\..*)|
+ (node_modules/.*)|
+ (client/.*)|
+ (test/.*)|
+ (docs/.*)|
+ )$
